tests/NormalTests/paczka1/small_fuzzy/21906224.err
Error in line 1: Nqxd9FWuOcl S817 66,0
Error in line 9: 4eXR S817 -5,8
